# rust_ray_tracer

./: Cargo.toml  README.md
examples/: 3balls.rs  blue_red.rs  cylinders.rs  final_weekend.rs
src/: aabb.rs  bvh_tree.rs  camera.rs  examples.rs  lib.rs  main.rs  material.rs  material2.rs  primative.rs  ray.rs  render.rs  scene.rs  scene2.rs  scene_generator.rs  vector.rs  world.rs
src/core/: colour.rs  matrix.rs  mod.rs  normal.rs  point.rs  terrain.py  transforms.rs  vector.rs
src/shapes/: base.rs  cylinder.rs  mod.rs  sphere.rs  sphere2.rs
src/textures/: base.rs  mod.rs  solid_colour.rs
