[package]
name = "rust_ray_tracing"
version = "0.1.0"
authors = ["Christopher Webb <christopher.webb@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
console = "0.9.1"
indicatif = "0.13.0"
num_cpus = "1.0"
rand = "0.7.0"
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0"
float-cmp = "0.8.0"
